Page mentions légales

--- a/src/mentionsLegales.html
+++ b/src/mentionsLegales.html
@@ -21,7 +21,65 @@
 </header>
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
+    <main class="p-8">
+        <h1 class="text-2xl font-bold text-center mb-8">Mentions légales</h1>
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold mb-4">1. Informations légales</h2>
+            <p><strong>Nom du site :</strong> NaMaster</p>
+            <p><strong>Propriétaire :</strong> Namaster, société</p>
+            <p><strong>Adresse :</strong> 52 Rue des Docteurs Calmette et Guérin, 53000 Laval</p>
+            <p><strong>SIRET :</strong> 123 456 789 00010</p>
+            <p><strong>Contact :</strong> <a href="mailto:namaster@contact.fr"
+                    class="text-blue-600">namaster@contact.fr</a> / +33 1 23 45 67 89</p>
+        </section>
 
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold mb-4">2. Hébergement</h2>
+            <p><strong>Hébergeur :</strong> Serveur de l'IUT du Mans</p>
+        </section>
+
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold mb-4">3. Responsable de publication</h2>
+            <p>Les membres en charge de la maintenance et du contenu :</p>
+            <ul class="list-disc ml-8">
+                <li><strong>Romain Annet</strong> : Développeur Full-Stack & Directeur Artistique</li>
+                <li><strong>Tony Delage</strong> : Designer Graphique & Développeur Front-End</li>
+                <li><strong>David Traversier</strong> : Développeur Front-End & Designer UX</li>
+                <li><strong>Alexis Le Corre</strong> : Développeur Full-Stack & Designer UX</li>
+            </ul>
+        </section>
+
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold mb-4">4. Objet du site</h2>
+            <p>Le site NaMaster a pour objectif de référencer tous les masters existants en France et de fournir des
+                informations détaillées sur ces formations (contenus, taux d’insertion, critères d’admission, etc.).</p>
+        </section>
+
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold mb-4">5. Données personnelles</h2>
+            <p>Les données collectées sur NaMaster sont limitées aux informations nécessaires à la création d’un compte
+                utilisateur. Ces données sont utilisées exclusivement pour permettre l'accès aux fonctionnalités
+                personnalisées (favoris, historique de recherche, etc.).</p>
+            <p>Conformément au RGPD, vous avez le droit d’accéder, de modifier ou de supprimer vos données personnelles.
+                Vous pouvez exercer ces droits en envoyant un email à <a href="mailto:namaster@contact.fr"
+                    class="text-blue-600">namaster@contact.fr</a>.</p>
+        </section>
+
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold mb-4">6. Propriété intellectuelle</h2>
+            <p>Les contenus (textes, images, graphismes, logos) présents sur NaMaster sont protégés par les lois sur la
+                propriété intellectuelle. Toute reproduction, distribution, modification ou utilisation sans
+                autorisation préalable est interdite.</p>
+        </section>
+
+        <section>
+            <h2 class="text-xl font-semibold mb-4">7. Limitations de responsabilité</h2>
+            <p>NaMaster s’efforce de fournir des informations exactes et à jour. Toutefois, le site ne peut être tenu
+                responsable des erreurs ou omissions dans les contenus proposés, ni des conséquences de leur
+                utilisation. En cas de problème lié aux informations, l'entièreté des responsabilités retombent sur Tony Delage</p>
+        </section>
+
+    </main>
     <footer id="footer-container">
     </footer>
 
