ajout de blague (faq)

--- a/src/Faq.html
+++ b/src/Faq.html
@@ -22,154 +22,147 @@
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
 
+    <!-- Section FAQ -->
     <main class="p-6">
         <!-- Section FAQ -->
-        <div id="faq" class="mt-10 max-w-4xl mx-auto">
-            <h3 class="text-center text-2xl md:text-3xl font-bold">Foire Aux Questions (FAQ)</h3>
-            <hr class="my-6 border-t border-gray-300">
+        <div id="faq" class="mt-10">
+            <h3 class="text-center text-xl font-bold">FAQ</h3>
+            <hr class="my-4 border-t border-gray-300">
 
             <div class="space-y-6">
                 <!-- Question 1 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Comment utiliser NaMaster pour trouver un master ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Qu'est-ce que NaMaster ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Il vous suffit de saisir vos critères de recherche dans notre barre dédiée (comme votre domaine
-                        d'intérêt ou votre région préférée) pour obtenir une liste des masters correspondants. Vous
-                        pouvez également consulter des fiches détaillées sur chaque établissement.
+                        NaMaster est une plateforme dédiée à aider les étudiants à trouver le master idéal en fonction
+                        de leurs critères personnels et académiques. Nous référencions des milliers de formations
+                        proposées par les meilleurs établissements, vous aidant ainsi à faire un choix éclairé pour la
+                        suite de vos études.
                     </p>
                 </div>
 
                 <!-- Question 2 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">NaMaster est-il gratuit ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Comment puis-je filtrer les masters proposés ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Oui, NaMaster est une plateforme entièrement gratuite pour tous les étudiants. Notre mission est
-                        de vous accompagner dans votre recherche sans aucun coût.
+                        Sur NaMaster, vous pouvez filtrer les masters en fonction de différents critères : domaine
+                        d'études, localisation géographique, type de formation, et bien d'autres. Vous pouvez affiner
+                        votre recherche selon vos préférences et vos projets professionnels.
                     </p>
                 </div>
 
                 <!-- Question 3 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Puis-je sauvegarder mes formations préférées ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">NaMaster propose-t-il des masters à distance ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Absolument ! En créant un compte sur NaMaster, vous pouvez ajouter des masters à votre liste de
-                        favoris pour les retrouver facilement plus tard.
+                        Oui, NaMaster répertorie également des formations à distance, pour ceux qui souhaitent
+                        poursuivre leur parcours tout en ayant plus de flexibilité. Vous pouvez trouver des masters à
+                        distance ou en e-learning directement via notre plateforme.
                     </p>
                 </div>
 
-                <!-- Easter Egg 1 (caché après Question 3) -->
+                <!-- Easter Egg 1 (caché après Question 3, pour Tony) -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Tony, pourquoi es-tu si créatif ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Tony, d'où viens ta créativité ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Je dirais que c’est le résultat d'une éternelle recherche de nouvelles idées, mais aussi de
-                        l'inspiration que j'ai dans les films et comics que j'adore ! Et non, ce n'est pas le café qui
-                        me garde inspiré, mais plutôt mes sessions sur Garen, un champion que j'affectionne
-                        particulièrement. Rien de tel qu'un bon combat sur la Faille de l'Invocateur pour booster la
-                        créativité !
+                        Ma créativité ? Elle naît là où les idées se croisent, comme dans un grand film d’action. Quand
+                        je joue Garen sur la Faille de l'Invocateur, chaque "DEMACIA !" résonne comme une explosion
+                        d’inspiration. L’énergie de la bataille nourrit mes projets, tout comme les films épiques de
+                        Marvel et Transformers, où chaque scène me pousse à repousser mes limites créatives. Et bien
+                        sûr, tout ça ne serait pas possible sans un peu de passion, de bonté et de courage, à la manière
+                        d'Optimus
+                        Prime !
                     </p>
                 </div>
+
+
+                <!-- Easter Egg 2 (caché après Question 3, pour David) -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">David, quelle est ta source secrète d'inspiration ?
+                    </h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Mon inspiration ? Elle vient de tout ce qui fait avancer la technologie ! Mais je dois avouer
+                        que parfois, l'inspiration arrive lors d'une bonne session de codage, où chaque ligne de code me
+                        rapproche de l'illumination. Quand ça chauffe trop, il n'y a rien de mieux qu'une bonne
+                        "Ressurection" à la Mercy pour me donner un second souffle. Le code et les éclats de lumière
+                        d’Overwatch m'aident à garder le cap, même dans les moments les plus tendus.
+                    </p>
+                </div>
+
 
                 <!-- Question 4 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Comment contacter votre équipe en cas de problème ou de
-                        question ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Quels sont les critères les plus importants pour
+                        choisir un master ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Vous pouvez nous écrire à <a href="mailto:namaster@contact.fr"
-                            class="text-blue-500 underline">namaster@contact.fr</a> ou nous appeler au <strong>+33 1 23
-                            45 67 89</strong>. Vous pouvez aussi nous rendre visite à notre adresse située au <strong>52
-                            rue des docteurs Calmettet et Guérin, 53000 Laval, France</strong>.
+                        Les critères les plus importants sont la réputation de l'établissement, les spécialisations
+                        proposées, les opportunités de stage ou d'emploi après le diplôme, ainsi que la localisation et
+                        le mode de formation (présentiel, hybride, à distance).
+                    </p>
+                </div>
+
+                <!-- Easter Egg 3 (caché après Question 4, pour Alexis) -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">Alexis, comment gardes-tu ton calme en pleine tempête
+                        de code ?</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Quand ça chauffe sur le backend, il n'y a rien de mieux que de rester zen. Parfois, une session
+                        de méditation rapide ou une petite balade pour aérer le cerveau, et je suis prêt à revenir pour
+                        déboguer avec toute la sérénité d’un maître zen ! Le code n’a plus de secrets pour moi, même
+                        quand les serveurs sont en mode rébellion.
                     </p>
                 </div>
 
                 <!-- Question 5 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Puis-je suggérer un établissement ou une formation à
-                        ajouter sur NaMaster ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Puis-je sauvegarder mes masters préférés ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Oui, nous sommes toujours ouverts à enrichir notre base de données ! Envoyez-nous un message
-                        avec les informations de l’établissement ou de la formation via notre formulaire de contact ou
-                        par email.
+                        Oui, vous pouvez sauvegarder vos formations préférées dans un système de favoris pour y revenir
+                        plus tard. Cela vous permet de comparer facilement les masters qui vous intéressent.
                     </p>
                 </div>
 
                 <!-- Question 6 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Les informations sur les masters sont-elles à jour ?
-                    </h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Puis-je modifier ma recherche à tout moment ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Nous faisons de notre mieux pour maintenir les informations à jour en travaillant directement
-                        avec les établissements. Cependant, si vous remarquez une erreur, n’hésitez pas à nous le
-                        signaler.
+                        Oui, vous pouvez modifier vos critères de recherche à tout moment. NaMaster vous permet de
+                        réajuster vos filtres pour trouver exactement ce que vous cherchez.
                     </p>
                 </div>
+
+                <!-- Easter Egg 4 (caché après Question 6, pour Romain) -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">Romain, quel est ton secret pour être à la fois créatif
+                        et développeur ?</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Mon secret ? C’est tout dans mes cheveux roux ! Quand je code, ils prennent feu d'idées. Il
+                        paraît même qu’une mèche de ma chevelure enflammée a inspiré la dernière fonctionnalité sur
+                        laquelle je travaille. Ma créativité carbure à pleine vitesse, un peu comme ma voiture rouge,
+                        qui n'est pas seulement là pour me conduire, mais aussi pour m'aider à garder ce flair audacieux
+                        dans chaque projet. On dit que l'inspiration frappe fort, mais moi, elle a carrément les cheveux
+                        dans le vent !
+                    </p>
+                </div>
+
+
+
 
                 <!-- Question 7 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Est-ce que NaMaster est disponible en plusieurs
-                        langues ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Comment puis-je savoir si un master est bien
+                        accrédité ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Actuellement, NaMaster est disponible uniquement en français. Cependant, nous envisageons
-                        d’étendre nos services à d’autres langues dans le futur pour mieux répondre aux besoins des
-                        étudiants internationaux.
+                        Nous vous fournissons des informations détaillées sur chaque master, y compris son
+                        accréditation, les partenariats avec des entreprises et les avis d'anciens étudiants pour vous
+                        aider à vous assurer de la qualité de la formation.
                     </p>
                 </div>
 
-                <!-- Easter Egg 2 (caché après Question 7) -->
-                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">David et Alexis, êtes-vous vraiment des super-héros du
-                        développement ?</h4>
-                    <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Eh bien, chaque projet sur lequel nous travaillons semble être une aventure épique ! David manie
-                        les codes comme un maître, et Alexis est toujours prêt à relever tous les défis d'UX. Mais non,
-                        nous ne portons pas de capes... enfin, pas encore.
-                    </p>
-                </div>
-
-                <!-- Question 8 -->
-                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Comment puis-je modifier mes informations personnelles
-                        sur mon compte ?</h4>
-                    <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Pour modifier vos informations personnelles, il vous suffit de vous connecter à votre compte,
-                        puis de vous rendre dans les paramètres de votre profil où vous pourrez mettre à jour vos
-                        coordonnées, vos favoris et autres informations.
-                    </p>
-                </div>
-
-                <!-- Question 9 -->
-                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Comment ajouter des établissements ou des masters sur
-                        NaMaster ?</h4>
-                    <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Si vous êtes un établissement souhaitant figurer sur NaMaster, ou si vous avez des informations
-                        supplémentaires sur un master à partager, vous pouvez nous contacter par email à <a
-                            href="mailto:namaster@contact.fr" class="text-blue-500 underline">namaster@contact.fr</a>
-                        pour nous envoyer vos informations.
-                    </p>
-                </div>
-
-                <!-- Question 10 -->
-                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Puis-je imprimer les informations sur les masters ?
-                    </h4>
-                    <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Oui, chaque fiche de master possède un bouton d'impression afin de vous permettre d'imprimer les
-                        informations directement ou de les enregistrer en PDF pour plus tard.
-                    </p>
-                </div>
-
-                <!-- Question 11 (Easter Egg) -->
-                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Pourquoi Romain a-t-il les cheveux roux ?</h4>
-                    <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Une question de génétique, mais il est sûr que ses cheveux roux sont aussi brillants que ses
-                        compétences en développement ! Nous lui devons de nombreuses heures de code... et de blagues sur
-                        les carottes.
-                    </p>
-                </div>
             </div>
         </div>
     </main>
+
 
 
     <footer id="footer-container">
