Création Mentions Illégales

--- a/src/footer.html
+++ b/src/footer.html
@@ -37,7 +37,8 @@
 
         </div>
     </div>
-    <div>
-        <p class="">© Tous droits réservés</p>
+    <div class="flex flex-row justify-between">
+        <p class="">© 2024 NaMaster. Tous droits réservés.</p>
+        <a class="text-gray-600 text-xs" href="./mentionsIllégales.html"> Mentions Illégales </a>
     </div>
 </footer>
