--- a/src/mentionsLegales.html
+++ b/src/mentionsLegales.html
@@ -78,6 +78,9 @@
                 responsable des erreurs ou omissions dans les contenus proposés, ni des conséquences de leur
                 utilisation. En cas de problème lié aux informations, l'entièreté des responsabilités retombent sur Tony Delage</p>
         </section>
+        <section>
+            <a href="./mentionsIllégales.html"> <strong>Mentions Illégales</strong> </a>
+        </section>
 
     </main>
     <footer id="footer-container">
