html filtres et recherhces

--- a/src/rechercheETfiltres.html
+++ b/src/rechercheETfiltres.html
@@ -31,7 +31,7 @@
     <div class="mt-4">
       <!-- Filtres visibles -->
       <div id="filters-container"
-        class="overflow-x-auto flex gap-3 lg:justify-center lg:gap-4 scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-200 relative">
+        class="overflow-x-scroll flex gap-3 lg:justify-center lg:gap-4 scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-200 relative">
         <!-- Les 5 premiers filtres apparaîtront ici -->
       </div>
 
