faq + apropos (changement)

--- a/src/APropos.html
+++ b/src/APropos.html
@@ -79,7 +79,7 @@
             <h1 class="text-2xl font-bold">A PROPOS</h1>
         </div>
         <!-- Description -->
-        <div class="mt-6 text-justify">
+        <div class="grid mt-6 text-justify gap-y-2">
             <p>
                 Bienvenue sur <strong>NaMaster</strong>, votre allié incontournable dans la recherche de
                 <strong>masters</strong> et d’informations détaillées sur les établissements qui les proposent. Que vous
@@ -117,9 +117,10 @@
                 <strong>NaMaster</strong> !
             </p>
 
-            <strong>NaMaster</strong>, c’est plus qu’un simple site de recherche : c’est un véritable compagnon pour
-            vous guider
-            dans l’une des étapes les plus importantes de votre parcours universitaire.
+            <p>
+                <strong>NaMaster</strong>, c’est plus qu’un simple site de recherche : c’est un véritable compagnon pour
+                vous guider
+                dans l’une des étapes les plus importantes de votre parcours universitaire.
             </p>
             <!-- Barre de séparation -->
             <div class="h-px bg-gray-400 my-2 mx-12"></div>
