--- a/src/Faq.html
+++ b/src/Faq.html
@@ -22,12 +22,12 @@
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
 
-    <!-- Section FAQ -->
+    <!-- Section Foire aux Questions -->
     <main class="p-6">
-        <!-- Section FAQ -->
         <div id="faq" class="mt-10">
-            <h3 class="text-center text-xl font-bold">FAQ</h3>
+            <h3 class="text-center text-xl font-bold">Foire aux Questions</h3>
             <hr class="my-4 border-t border-gray-300">
+
 
             <div class="space-y-6">
                 <!-- Question 1 -->
@@ -41,13 +41,27 @@
                     </p>
                 </div>
 
+                <!-- Easter Egg 1 (pour Tony) -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">Tony, d'où viens ta créativité ?</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Ma créativité ? Elle naît là où les idées se croisent, comme dans un grand film d’action. Quand
+                        je joue Garen sur la Faille de l'Invocateur, chaque "DEMACIA !" résonne comme une explosion
+                        d’inspiration. L’énergie de la bataille nourrit mes projets, tout comme les films épiques de
+                        Marvel et Transformers, où chaque scène me pousse à repousser mes limites créatives. Et bien
+                        sûr, tout ça ne serait pas possible sans un peu de passion, de bonté et de courage, à la manière
+                        d'Optimus Prime !
+                    </p>
+                </div>
+
                 <!-- Question 2 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Comment puis-je filtrer les masters proposés ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Quels sont les critères les plus importants pour
+                        choisir un master ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Sur NaMaster, vous pouvez filtrer les masters en fonction de différents critères : domaine
-                        d'études, localisation géographique, type de formation, et bien d'autres. Vous pouvez affiner
-                        votre recherche selon vos préférences et vos projets professionnels.
+                        Les critères les plus importants sont la réputation de l'établissement, les spécialisations
+                        proposées, les opportunités de stage ou d'emploi après le diplôme, ainsi que la localisation et
+                        le mode de formation (présentiel, hybride, à distance).
                     </p>
                 </div>
 
@@ -61,22 +75,7 @@
                     </p>
                 </div>
 
-                <!-- Easter Egg 1 (caché après Question 3, pour Tony) -->
-                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Tony, d'où viens ta créativité ?</h4>
-                    <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Ma créativité ? Elle naît là où les idées se croisent, comme dans un grand film d’action. Quand
-                        je joue Garen sur la Faille de l'Invocateur, chaque "DEMACIA !" résonne comme une explosion
-                        d’inspiration. L’énergie de la bataille nourrit mes projets, tout comme les films épiques de
-                        Marvel et Transformers, où chaque scène me pousse à repousser mes limites créatives. Et bien
-                        sûr, tout ça ne serait pas possible sans un peu de passion, de bonté et de courage, à la manière
-                        d'Optimus
-                        Prime !
-                    </p>
-                </div>
-
-
-                <!-- Easter Egg 2 (caché après Question 3, pour David) -->
+                <!-- Easter Egg 2 (pour David) -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
                     <h4 class="text-lg md:text-xl font-semibold">David, quelle est ta source secrète d'inspiration ?
                     </h4>
@@ -89,19 +88,16 @@
                     </p>
                 </div>
 
-
                 <!-- Question 4 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Quels sont les critères les plus importants pour
-                        choisir un master ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Puis-je modifier ma recherche à tout moment ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Les critères les plus importants sont la réputation de l'établissement, les spécialisations
-                        proposées, les opportunités de stage ou d'emploi après le diplôme, ainsi que la localisation et
-                        le mode de formation (présentiel, hybride, à distance).
+                        Oui, vous pouvez modifier vos critères de recherche à tout moment. NaMaster vous permet de
+                        réajuster vos filtres pour trouver exactement ce que vous cherchez.
                     </p>
                 </div>
 
-                <!-- Easter Egg 3 (caché après Question 4, pour Alexis) -->
+                <!-- Easter Egg 3 (pour Alexis) -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
                     <h4 class="text-lg md:text-xl font-semibold">Alexis, comment gardes-tu ton calme en pleine tempête
                         de code ?</h4>
@@ -124,14 +120,28 @@
 
                 <!-- Question 6 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Puis-je modifier ma recherche à tout moment ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Comment puis-je savoir si un master est bien
+                        accrédité ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Oui, vous pouvez modifier vos critères de recherche à tout moment. NaMaster vous permet de
-                        réajuster vos filtres pour trouver exactement ce que vous cherchez.
+                        Nous vous fournissons des informations détaillées sur chaque master, y compris son
+                        accréditation, les partenariats avec des entreprises et les avis d'anciens étudiants pour vous
+                        aider à vous assurer de la qualité de la formation.
                     </p>
                 </div>
 
-                <!-- Easter Egg 4 (caché après Question 6, pour Romain) -->
+                <!-- Question 7 -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">Quels sont les débouchés professionnels après un master
+                        sur NaMaster ?</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Après avoir obtenu votre master, vous avez de nombreuses opportunités professionnelles dans
+                        divers
+                        secteurs, selon votre spécialisation. NaMaster vous aide à trouver des masters avec un excellent
+                        taux d'insertion professionnelle et des partenariats avec des entreprises reconnues.
+                    </p>
+                </div>
+
+                <!-- Easter Egg 4 (pour Romain) -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
                     <h4 class="text-lg md:text-xl font-semibold">Romain, quel est ton secret pour être à la fois créatif
                         et développeur ?</h4>
@@ -145,23 +155,21 @@
                     </p>
                 </div>
 
-
-
-
-                <!-- Question 7 -->
+                <!-- Question 8 -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <h4 class="text-lg md:text-xl font-semibold">Comment puis-je savoir si un master est bien
-                        accrédité ?</h4>
+                    <h4 class="text-lg md:text-xl font-semibold">Comment NaMaster me guide-t-il vers les meilleures
+                        opportunités de stage ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
-                        Nous vous fournissons des informations détaillées sur chaque master, y compris son
-                        accréditation, les partenariats avec des entreprises et les avis d'anciens étudiants pour vous
-                        aider à vous assurer de la qualité de la formation.
+                        NaMaster vous permet de filtrer les masters qui offrent les meilleures opportunités de stage en
+                        fonction des partenariats avec des entreprises. Vous pourrez ainsi identifier facilement les
+                        formations avec les meilleurs programmes de stage, essentiels pour démarrer votre carrière.
                     </p>
                 </div>
 
             </div>
         </div>
     </main>
+
 
 
 
