modification mentions Illégales

--- a/src/mentionsIllégales.html
+++ b/src/mentionsIllégales.html
@@ -28,7 +28,7 @@
             <p><strong>Nom du site :</strong> NaPasMaster</p>
             <p><strong>Propriétaire :</strong> Une organisation malicieuse à but lucrative.</p>
             <p><strong>Adresse :</strong> Quelque part dans les quartiers les plus sombes de Gotham.</p>
-            <p><strong>Contact :</strong> Pour nous contacter, ils vous suffit de projeter le Bat Signal dans le ciel, durant les nuits les plus sombre.</p>
+            <p><strong>Contact :</strong> Pas besoin de nous contacter, nous vous trouverons.</p>
         </section>
     
         <section class="mb-8">
